--- a/main.html
+++ b/main.html
@@ -11,6 +11,32 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <div class="progress-container">
+  <div class="progress" id="progress"></div>
+
+  <div class="circle active" id="circle-1">1</div>
+  <div class="circle" id="circle-2">2</div>
+  <div class="circle" id="circle-3">3</div>
+  <div class="circle" id="circle-4">4</div>
+  <div class="circle" id="circle-5">5</div>
+</div>
+
+<div class="buttons">
+  <button id="prev" disabled>Previous</button>
+  <button id="next">Next</button>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
 </body>
 
 </html>
